// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`crm/contacts/sendgrid Create should perform successfully 1`] = `
Object {
  "value": Object {
    "id": null,
  },
}
`;

exports[`crm/contacts/sendgrid Create should return error if email is missing 1`] = `
Object {
  "error": "HTTPError: Expected HTTP error
AST Path: definitions[0].statements[0]
Original Map Location: Line 5, column 3",
}
`;

exports[`crm/contacts/sendgrid Search should perform successfully 1`] = `
Object {
  "value": Array [
    Object {
      "country": "",
      "customProperties": Object {
        "existingField": "value",
      },
      "email": "test@example.com",
      "firstName": "test",
      "id": "9fd2a571-2f57-4410-8974-ddae6a4fb134",
      "lastName": "",
      "phone": "",
    },
  ],
}
`;

exports[`crm/contacts/sendgrid Search should return error if unknow operator is used 1`] = `
Object {
  "error": "HTTPError: Expected HTTP error
AST Path: definitions[2].statements[1]
Original Map Location: Line 147, column 3",
}
`;

exports[`crm/contacts/sendgrid Update should perform successfully 1`] = `
Object {
  "value": Object {
    "id": "test@example.com",
  },
}
`;

exports[`crm/contacts/sendgrid Update should return error if email is missing 1`] = `
Object {
  "error": "HTTPError: Expected HTTP error
AST Path: definitions[1].statements[0]
Original Map Location: Line 70, column 3",
}
`;
